# zenput

./: .gitignore  Cargo.toml
InputBot/: Cargo.toml
InputBot/examples/: test.rs
InputBot/src/: common.rs  main.rs  public.rs
InputBot/src/linux/: mod.rs
InputBot/src/windows/: mod.rs
ds-transcriber/: Cargo.toml
ds-transcriber/src/: config.rs  stream.rs  transcriber.rs
zenput_core/: Cargo.toml
zenput_core/src/: main.rs
