[package]
name = "ds-transcriber"
version = "0.1.3"
authors = ["Kawaki-san"]
edition = "2018"
description = "A crate using DeepSpeech bindings to convert mic audio from speech to text"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
deepspeech = { path = "../../deepspeech_rs" }
nnnoiseless = "0.3.2"
