[package]
name = "zenput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { path = "../InputBot" }
#ds-transcriber = "0.1.3"
ds-transcriber = { path = "../ds-transcriber"}
winapi = "0.3.9"
log = "0.4.14"
env_logger = "0.9.0"

